# Audio-Transcription

./: .dockerignore  .gitignore  Dockerfile  render.yaml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/audio_transcription/: __init__.py
backend/audio_transcription/api/: __init__.py  config.py  deps.py  main.py  schemas.py
backend/audio_transcription/api/routers/: assembly.py  batch.py  health.py  jobs.py  subtitles.py  transcribe.py  users.py  youtube.py
backend/audio_transcription/db/: __init__.py  __main__.py  cli.py  constants.py  database_url.py  session.py
backend/audio_transcription/db/models/: __init__.py  job.py  user.py
backend/audio_transcription/services/: __init__.py  assembly.py  batch.py  subtitles.py  transcription.py  youtube.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts  transcribeUpload.ts  types.ts  xhrUpload.ts
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  FileUpload.tsx  Layout.tsx  ProgressBar.tsx  TranscriptAudioPlayer.tsx
frontend/src/constants/: limits.ts
frontend/src/context/: Notifications.tsx
frontend/src/hooks/: useJobLive.ts
frontend/src/lib/: jobProgressEstimate.ts  jobWebSocketUrl.ts
frontend/src/pages/: BatchPage.tsx  HomePage.tsx  JobDetailPage.tsx  JobsPage.tsx  SubtitlesPage.tsx  TranscribePage.tsx  UpcomingFeaturePage.tsx  (+1 more)
supabase/: config.toml
supabase/migrations/: 20260325180000_new-migration.sql
(+1 files in other folders)
